--- a/index.html
+++ b/index.html
@@ -1,8 +1,19 @@
 <html>
 <head>
 <title> Node server demo</title>
+  <style>
+    #{box-sizing: border-box;}
+    .hd{width:100%;}
+    .menuBtn{padding:10px; margin:2px;display:flex; flex-direction:column;border:solid grey}
+    .innerStrips{width:2em; height:0.5em; background:grey; display:flex;)
+  </style>
 </head>
 <body>
+<div class="hd">
+ <div class="menuBtn">
+   <div class="innerStrips"></div>
+ </div>
+</div>
 <script src="server.js"></script>
 </body>
 
