--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <style>
     #{box-sizing: border-box;}
     .hd{width:100%;}
-    .menuBtn{padding:10px; margin:2px;display:flex; flex-direction:column;border:solid grey}
+    .menuBtn{width: fit-content; padding:10px; margin:2px;display:flex; flex-direction:column;border:solid grey; justify-content:space-evenly;}
     .innerStrips{width:2em; height:0.5em; background:grey; display:flex;)
   </style>
 </head>
