--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
 <div class="hd">
  <div class="menuBtn">
    <div class="innerStrips"></div>
+   <div class="innerStrips"></div>
+   <div class="innerStrips"></div>
  </div>
 </div>
 <script src="server.js"></script>
