--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     #{box-sizing: border-box;}
     .hd{width:100%;}
     .menuBtn{width: max-content; padding:10px; margin:2px;display:flex; flex-direction:column;border:solid grey; justify-content:space-evenly;}
-    .innerStrips{width:2em; height:0.5em; background:grey; display:flex;border-solid white 2px;}
+    .innerStrips{width:2em; height:0.5em; background:grey; display:flex;border:solid white 2px;}
   </style>
 </head>
 <body>
