--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     .hd{width:100%;}
     .menuBtn{width: max-content; padding:10px; margin:2px;display:flex; flex-direction:column;border:solid grey; justify-content:space-evenly;}
     .innerStrips{width:2em; height:0.5em; background:grey; display:flex;border:solid white 2px;}
+    .menuList{display:none; width:30vw; padding:10px;margin: 5em 1em;}
+    .menu{padding:5px; margin-left:1em; }
   </style>
 </head>
 <body>
@@ -19,7 +21,23 @@
    <div class="innerStrips"></div>
  </div>
 </div>
+<div class="menuList">
+  <div class="menu">Home</div>
+  <div class="menu">About Us</div>
+  <div class="menu">Contact and Feedback</div>
+</div>
 <script src="server.js"></script>
+<script>
+  var menuBtn = document.getElementById("menuBtn");
+  var menuList = document.getElementById("menuList");
+  menuBtn.addEventListener("click", function(event){
+  if(event.target !== menuList){
+  menuList.style.display = "none";
+  }
+    else{
+      menuList.style.display ="inline-block";
+  }
+</script>
 </body>
 
 </html>
