--- a/index.html
+++ b/index.html
@@ -28,16 +28,19 @@
 </div>
 <script src="server.js"></script>
 <script>
-  var menuBtn = document.getElementById("menuBtn");
-  var menuList = document.getElementById("menuList");
+  var menuBtn = document.querySelctor(".menuBtn");
+  var menuList = document.querySelector(".menuList");
   menuBtn.addEventListener("click", function(){
-    menuList.style ="display: inline-block; position: left:0; top:0;";
+    menuList.setAttribute("style", "display: inline-block; position:absolute; left:0; top:0;");
+    alert("menuBtn clicked");
   menuList.addEventListener("click", function(event){
   if(event.target !== menuList){
   menuList.style.display = "none";
+    alert("clicked outside hence closing menuList");
   }
     else{
       menuList.style.display ="inline-block";
+     alert("clicked,on list hence remain open");
   }
     }
 </script>
