--- a/index.html
+++ b/index.html
@@ -26,9 +26,8 @@
   <div class="menu">About Us</div>
   <div class="menu">Contact and Feedback</div>
 </div>
-<script src="server.js"></script>
 <script>
-  var menuBtn = document.querySelctor(".menuBtn");
+  var menuBtn = document.querySelector(".menuBtn");
   var menuList = document.querySelector(".menuList");
   menuBtn.addEventListener("click", function(){
     menuList.setAttribute("style", "display: inline-block; position:absolute; left:0; top:0;");
