--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     .hd{width:100%;}
     .menuBtn{width: max-content; padding:10px; margin:2px;display:flex; flex-direction:column;border:solid grey; justify-content:space-evenly;}
     .innerStrips{width:2em; height:0.5em; background:grey; display:flex;border:solid white 2px;}
-    .menuList{display:block; width:30vw; padding:10px;margin: 5em 1em;}
+    .menuList{display:block; width:30vw; padding:10px;}
     .menu{padding:5px; margin-left:1em; }
   </style>
 </head>
@@ -22,6 +22,11 @@
  </div>
 </div>
 <div class="menuList">
+  <div class="menuBtn">
+   <div class="innerStrips"></div>
+   <div class="innerStrips"></div>
+   <div class="innerStrips"></div>
+ </div>
   <div class="menu">Home</div>
   <div class="menu">About Us</div>
   <div class="menu">Contact and Feedback</div>
