--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     .hd{width:100%;}
     .menuBtn{width: max-content; padding:10px; margin:2px;display:flex; flex-direction:column;border:solid grey; justify-content:space-evenly;}
     .innerStrips{width:2em; height:0.5em; background:grey; display:flex;border:solid white 2px;}
-    .menuList{display:block; width:30vw; padding:10px;}
+    .menuList{display:block; width:30vw; padding:10px; background:green;}
     .menu{padding:5px; margin-left:1em; }
   </style>
 </head>
