--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     .hd{width:100%;}
     .menuBtn{width: max-content; padding:10px; margin:2px;display:flex; flex-direction:column;border:solid grey; justify-content:space-evenly;}
     .innerStrips{width:2em; height:0.5em; background:grey; display:flex;border:solid white 2px;}
-    .menuList{display:none;  padding:10px; background:green; position:absolute; top:0; left:0;}
+    .menuList{display:none;  padding:10px; position:absolute; top:0; left:0;}
     .menu{padding:5px; margin-left:1em; }
   </style>
 </head>
@@ -34,8 +34,18 @@
 <script>
   var menuBtn = document.querySelector(".menuBtn");
   var menuList = document.querySelector(".menuList");
+  var menu = document.querySelector(".menu");
   menuBtn.addEventListener("click", function(){
-  menuList.style.display = "block";});
+  menuList.style.display = "block";
+  menu.addEventListener("click", (event) => {
+  if(event.target == menu){
+  alert(this.innerText + "menu cliked");
+  }else{
+  menuList.style.display ="none";
+  }
+  });
+  
+  });
     
 </script>
 </body>
