--- a/index.html
+++ b/index.html
@@ -35,7 +35,15 @@
   var menuBtn = document.querySelector(".menuBtn");
   var menuList = document.querySelector(".menuList");
   var menu = document.querySelector(".menu");
-  document.window.addEventListener("click", (event)=> {if(event.target == menuBtn){menuList.style.display="block"; menuBtn.style.display ="none";}else{menuList.style.display="none"}});
+  document.window.addEventListener("click", (event)=> {
+    if(event.target === menuBtn){
+      menuList.style.display="block"; 
+      menuBtn.style.display ="none";
+    }
+    else{
+      menuList.style.display="none"
+    }
+  });
     
 </script>
 </body>
