--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
   var menuBtn = document.querySelector(".menuBtn");
   var menuList = document.querySelector(".menuList");
   var menu = document.querySelector(".menu");
-  document.window.addEventListener("click", (event)=> {
+  document.addEventListener("click", (event)=> {
     if(event.target === menuBtn){
       menuList.style.display="block"; 
       menuBtn.style.display ="none";
